1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* CompleteProbeMap.m, CompleteVarMap.m, CustomProbeMap.m,
	DefaultProbeMap.m, Probe.m, ProbeMap.m, VarProbe.m: Use raiseEvent()
	instead of raiseEvent: and WarningMessage instead of Warning.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* VarProbe.m: Don't include objc/objc.h.  Include misc.h
	instead of stdio.h.

	* CustomProbeMap.m: Include misc.h instead of stdarg.h.

1998-11-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* MessageProbe.m ([MessageProbe -createEnd]): Set arguments to NULL
	if no arguments; don't attempt malloc of size zero.

1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* objectbase.h (Arguments): Remove (moved to defobj.h).

	* Makefile.am (SRC, objectbase_HEADERS): Remove Arguments.[mh] (moved
	to defobj).
	(version.h): Remove (now in defobj).
	(install-data-local): Remove.

1998-10-28  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Arguments.m (VARCHAR): Cast argument to int before passing
	to isalnum.

1998-10-27  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Arguments.m (prefix): New function.
	([Arguments -_getSwarmHome_:]): Use it to transform
	SWARMHOME and PREFIX.

1998-10-27  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Add case for void return
	(both libffi and ffcall versions).

1998-10-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m: Change SIGNATURE_FILE to swarmconfig.h,
	SIGNATURE_SUBPATH to include/ and SIGNATURE_PATH to 
	incclude/SIGNATURE_FILE.

1998-10-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment. Swarm 1.3.1 released.

	* Arguments.m ([Arguments -_getSwarmHome_:]): Do a search
	for SWARMHOME if value in environment variable doesn't have
	the signature file.

1998-10-10  Marcus G. Daniels  <mgd@sangre.santafe.edu>

	* Arguments.m (dropDirectory): Remove.