@@ -1,3 +1,8 @@
+1999-01-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* MessageProbe.m ([MessageProbe -doubleDynamicCallOn:]): 
+	Don't munge return types for the sake of avcall; it's not broken.
+
 1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* CompleteProbeMap.m, CompleteVarMap.m, CustomProbeMap.m,
